@@ -1,4 +1,5 @@
 from django.conf import settings
+from django.contrib.auth.models import User
 from django.utils.importlib import import_module
 from django.test.client import RequestFactory
 from django.test.utils import override_settings
@@ -6,6 +7,7 @@ from django.test.utils import override_settings
 from allauth.socialaccount.tests import create_oauth2_tests
 from allauth.account import app_settings as account_settings
 from allauth.account.models import EmailConfirmation, EmailAddress
+from allauth.socialaccount.models import SocialAccount
 from allauth.socialaccount.providers import registry
 from allauth.tests import MockedResponse
 from allauth.account.signals import user_signed_up
@@ -13,6 +15,10 @@ from allauth.account.adapter import get_adapter
 
 from .provider import GoogleProvider
 
+@override_settings(SOCIALACCOUNT_AUTO_SIGNUP=True,
+                   ACCOUNT_SIGNUP_FORM_CLASS=None,
+                   ACCOUNT_EMAIL_VERIFICATION \
+                   =account_settings.EmailVerificationMethod.MANDATORY)
 class GoogleTests(create_oauth2_tests(registry.by_id(GoogleProvider.id))):
 
     def get_mocked_response(self, verified_email=True):
@@ -26,10 +32,6 @@ class GoogleTests(create_oauth2_tests(registry.by_id(GoogleProvider.id))):
                 "verified_email": %s }
 """ % (repr(verified_email).lower()))
 
-    @override_settings(SOCIALACCOUNT_AUTO_SIGNUP=True,
-                       ACCOUNT_SIGNUP_FORM_CLASS=None,
-                       ACCOUNT_EMAIL_VERIFICATION
-                       =account_settings.EmailVerificationMethod.MANDATORY)
     def test_email_verified(self):
         test_email = 'raymond.penners@gmail.com'
         self.login(self.get_mocked_response(verified_email=True))
@@ -40,10 +42,6 @@ class GoogleTests(create_oauth2_tests(registry.by_id(GoogleProvider.id))):
                              .filter(email_address__email=test_email) \
                              .exists())
 
-    @override_settings(SOCIALACCOUNT_AUTO_SIGNUP=True,
-                       ACCOUNT_SIGNUP_FORM_CLASS=None,
-                       ACCOUNT_EMAIL_VERIFICATION
-                       =account_settings.EmailVerificationMethod.MANDATORY)
     def test_user_signed_up_signal(self):
         sent_signals = []
 
@@ -59,10 +57,6 @@ class GoogleTests(create_oauth2_tests(registry.by_id(GoogleProvider.id))):
         self.login(self.get_mocked_response(verified_email=True))
         self.assertTrue(len(sent_signals) > 0)
 
-    @override_settings(SOCIALACCOUNT_AUTO_SIGNUP=True,
-                       ACCOUNT_SIGNUP_FORM_CLASS=None,
-                       ACCOUNT_EMAIL_VERIFICATION
-                       =account_settings.EmailVerificationMethod.MANDATORY)
     def test_email_unverified(self):
         test_email = 'raymond.penners@gmail.com'
         self.login(self.get_mocked_response(verified_email=False))
@@ -74,10 +68,6 @@ class GoogleTests(create_oauth2_tests(registry.by_id(GoogleProvider.id))):
                             .exists())
 
 
-    @override_settings(SOCIALACCOUNT_AUTO_SIGNUP=True,
-                       ACCOUNT_SIGNUP_FORM_CLASS=None,
-                       ACCOUNT_EMAIL_VERIFICATION
-                       =account_settings.EmailVerificationMethod.MANDATORY)
     def test_email_verified_stashed(self):
         # http://slacy.com/blog/2012/01/how-to-set-session-variables-in-django-unit-tests/
         engine = import_module(settings.SESSION_ENGINE)
@@ -99,3 +89,27 @@ class GoogleTests(create_oauth2_tests(registry.by_id(GoogleProvider.id))):
                              .filter(email_address__email=test_email) \
                              .exists())
 
+
+
+
+    def test_account_connect(self):
+        email = 'some@mail.com'
+        user = User.objects.create(username='user',
+                                   is_active=True,
+                                   email=email)
+        user.set_password('test')
+        user.save()
+        EmailAddress.objects.create(user=user,
+                                    email=email,
+                                    primary=True,
+                                    verified=True)
+        self.client.login(username=user.username,
+                          password='test')
+        self.login(self.get_mocked_response(verified_email=True))
+        # Check if we connected...
+        self.assertTrue(SocialAccount.objects.filter(user=user,
+                                                     provider=GoogleProvider.id).exists())
+        # For now, we do not pick up any new e-mail addresses on connect
+        self.assertEquals(EmailAddress.objects.filter(user=user).count(), 1)
+        self.assertEquals(EmailAddress.objects.filter(user=user,
+                                                      email=email).count(), 1)
