@@ -1,3 +1,8 @@
+2013-04-16  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Fixed potential error (`assert`) when connecting social
+	accounts.
+
 2013-04-13  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Added support for custom username handling in case of custom
